Adaptive apple size

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 left: apple.left + '%',
                 top: apple.top + '%',
                 opacity: (game) ? 1 : .5,
-                width: (apple.size * 8) + 'vh',
+                width: apple.size + 'vh',
                 transform: 'rotate(' + apple.rot + 'deg)',
             }" 
         >
